Worked on Warp Point Viewing.